# soundsafe

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  project.yaml  rust-toolchain.toml  team.json  tsconfig.base.json  vitest.config.ts
.claude/: settings.json  team.json
.claude/agents/: accessibility-reviewer.md  adr-drift-detector.md  crypto-reviewer.md  dsp-reviewer.md  platform-boundary-reviewer.md  safety-reviewer.md
.claude/commands/: adr.md  comms.md  context.md  memory.md  refine.md  reflect.md
.claude/team-configs/: agent-team-roles.json
.codex-workflow/config/: active-team.json  team.json
.codex-workflow/skills/adr/: SKILL.md
.codex-workflow/skills/comms/: SKILL.md
.codex-workflow/skills/context/: SKILL.md
.codex-workflow/skills/memory/: SKILL.md
.codex-workflow/skills/refine/: SKILL.md
.codex-workflow/skills/reflect/: SKILL.md
.codex-workflow/team-configs/: code-reviewer-config.json
.github/workflows/: ci.yml
crates/sfx-audio-graph/: Cargo.toml
crates/sfx-audio-graph/src/: lib.rs
crates/sfx-comms-crypto/: Cargo.toml
crates/sfx-comms-crypto/src/: lib.rs
crates/sfx-dsp/: Cargo.toml
crates/sfx-dsp/src/: lib.rs  transform.rs
crates/sfx-dsp/src/transforms/: gain.rs  mod.rs
crates/sfx-pack-manifest/: Cargo.toml
crates/sfx-pack-manifest/src/: lib.rs
crates/sfx-pack-tooling/: Cargo.toml
crates/sfx-pack-tooling/src/: main.rs
crates/sfx-pack-vault/: Cargo.toml
crates/sfx-pack-vault/src/: lib.rs
crates/sfx-roadmap-engine/: Cargo.toml
crates/sfx-roadmap-engine/src/: clock.rs  lib.rs
crates/sfx-safety/: Cargo.toml
crates/sfx-safety/src/: lib.rs
crates/sfx-signature/: Cargo.toml
crates/sfx-signature/src/: lib.rs
crates/sfx-test-fixtures/: Cargo.toml
crates/sfx-test-fixtures/src/: lib.rs
dev_communication/fullstack/: status.md
dev_communication/fullstack/inbox/: 2026-04-20-FS-ISS-001-handoff.md  2026-04-20-FS-ISS-002-handoff.md  2026-04-20-FS-ISS-003-handoff.md  2026-04-21_20260421T062158Z_fs-iss-001-fs-iss-001-blocked-in-qa-automated-gates.md  2026-04-21_20260421T062159Z_fs-iss-003-fs-iss-003-blocked-in-qa-automated-gates.md  2026-04-21_20260421T081343Z_fs-iss-007-fs-iss-007-blocked-in-qa-automated-gates.md  2026-04-21_dev-rehandoff-fs-iss-001.md  2026-04-21_dev-rehandoff-fs-iss-002.md  2026-04-21_dev-rehandoff-fs-iss-003.md  2026-04-21_fs-iss-010-manual-review-blocked.md  2026-04-21_fs-iss-011-manual-review-blocked.md  2026-04-21_qa-handoff-fs-iss-004.md  2026-04-21_qa-handoff-fs-iss-005.md  2026-04-21_qa-handoff-fs-iss-007.md  2026-04-21_qa-handoff-fs-iss-008.md  2026-04-21_qa-handoff-fs-iss-009.md  2026-04-21_qa-handoff-fs-iss-011.md  2026-04-22_dev-rehandoff-fs-iss-007-take3.md  2026-04-22_dev-rehandoff-fs-iss-007-take4.md  2026-04-22_dev-rehandoff-fs-iss-008-take2.md  2026-04-22_dev-rehandoff-fs-iss-008-take3.md  2026-04-22_dev-rehandoff-fs-iss-008-take4.md  2026-04-22_dev-rehandoff-fs-iss-009-take2.md  2026-04-22_dev-rehandoff-fs-iss-009-take3.md  2026-04-22_dev-rehandoff-fs-iss-009-take4.md  2026-04-22_dev-rehandoff-fs-iss-010-take3.md  2026-04-22_dev-rehandoff-fs-iss-010-take4.md  2026-04-22_dev-rehandoff-fs-iss-011-state-telemetry.md  2026-04-22_dev-rehandoff-fs-iss-011-take3.md  2026-04-22_dev-rehandoff-fs-iss-011-take4.md  2026-04-29_dev-rehandoff-fs-iss-007-take5.md  2026-04-29_dev-rehandoff-fs-iss-008-take5.md  2026-04-29_dev-rehandoff-fs-iss-009-take5.md  2026-04-29_dev-rehandoff-fs-iss-010-take5.md  2026-04-29_dev-rehandoff-fs-iss-011-take5.md
dev_communication/fullstack/status/: 2026-04-21T06-46-05Z_status.md  2026-04-21T09-00-01Z_status.md  2026-04-21T09-15-01Z_status.md  2026-04-21T09-30-01Z_status.md  2026-04-21T09-45-01Z_status.md  2026-04-21T10-00-01Z_status.md  2026-04-21T10-15-01Z_status.md  2026-04-21T10-30-01Z_status.md  2026-04-21T10-45-01Z_status.md  2026-04-21T11-00-01Z_status.md  2026-04-21T11-15-01Z_status.md  2026-04-21T11-30-01Z_status.md  2026-04-21T11-45-01Z_status.md  2026-04-21T12-00-01Z_status.md  2026-04-21T12-15-01Z_status.md  2026-04-21T12-30-01Z_status.md  2026-04-21T12-45-01Z_status.md  2026-04-21T13-00-01Z_status.md  2026-04-21T13-15-01Z_status.md  2026-04-21T13-30-01Z_status.md  2026-04-21T13-45-01Z_status.md  2026-04-21T14-00-01Z_status.md  2026-04-21T14-15-01Z_status.md  2026-04-21T14-30-01Z_status.md  2026-04-21T14-45-01Z_status.md  2026-04-21T15-00-01Z_status.md  2026-04-21T15-15-01Z_status.md  2026-04-21T15-30-01Z_status.md  2026-04-21T15-45-01Z_status.md  2026-04-21T16-00-01Z_status.md  2026-04-21T16-15-01Z_status.md  2026-04-21T16-30-01Z_status.md  2026-04-21T16-45-02Z_status.md  2026-04-21T17-00-01Z_status.md  2026-04-21T17-15-01Z_status.md  2026-04-21T17-30-01Z_status.md  2026-04-21T17-45-01Z_status.md  2026-04-21T18-00-01Z_status.md  2026-04-21T18-15-01Z_status.md  2026-04-21T18-30-01Z_status.md  (+110 more)
dev_communication/shared/architecture/: decision-log.md  index.md
dev_communication/shared/guidance/: DEVELOPMENT_PRINCIPLES.md  FULLSTACK_DEV_ROLE_GUIDANCE.md  FULLSTACK_QA_ROLE_GUIDANCE.md
dev_communication/shared/specs/: content-protection.md  differentiation.md  feature-matrix.md  m1-phases.md  sound-delivery.md
dev_communication/templates/: issue-template.md
docs/architecture/: decision-log.md  index.md  sound-delivery.md
docs/architecture/decisions/: ADR-004-therapist-tier-deferred.md  ADR-005-monorepo-workspaces.md  ADR-006-cdn-encrypted-packs.md  ADR-008-tier-split.md  ADR-009-account-model.md  ADR-012-no-user-audio-v1.md  ADR-014-memory-adr-skills.md  ADR-015-safety-posture.md  (+2 more)
docs/product/: feature-matrix.md
memory/: MEMORY_TEMPLATE.md  index.md  memory-log.md  notes.md
memory/context/: index.md  project-bootstrap.md  project-overview.md
memory/entities/: index.md
memory/patterns/: index.md
memory/prompts/: index.md  prompt-registry.md
memory/sessions/: index.md
memory/team-configs/: _template.json  index.md
memory/templates/: context-template.md  entity-template.md  pattern-template.md  prompt-template.md  session-template.md
scripts/: keepalive-cron.sh
(+93 files in other folders)
