[package]
name = "sfx-dsp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Soundsafe — pure DSP primitives. Allocation-free in the audio callback."

[lints]
workspace = true

[dependencies]
num-traits.workspace = true

[dev-dependencies]
proptest.workspace = true
rstest.workspace = true
assert_no_alloc.workspace = true
