[package]
name = "sfx-pack-tooling"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Soundsafe native CLI — pack build, sign, encrypt, validate."

[lints]
workspace = true

[[bin]]
name = "sfx-packtool"
path = "src/main.rs"

[dependencies]
sfx-pack-manifest = { path = "../sfx-pack-manifest" }
sfx-pack-vault = { path = "../sfx-pack-vault" }
sfx-dsp = { path = "../sfx-dsp" }
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
