[package]
name = "sfx-safety"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Soundsafe safety rails — ceiling, ramp-up, exposure cap, cool-down. Enforcement only (ADR-015)."

[lints]
workspace = true

[dependencies]

[dev-dependencies]
proptest.workspace = true
rstest.workspace = true
