[package]
name = "sfx-signature"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Soundsafe signature transforms — Extreme Pitch-Shift LFO and Binaural Beats."

[lints]
workspace = true

[dependencies]
sfx-dsp = { path = "../sfx-dsp" }
num-traits.workspace = true

[dev-dependencies]
proptest.workspace = true
insta.workspace = true
