[package]
name = "sfx-test-fixtures"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Soundsafe — deterministic test fixtures (hello pack and friends). Dev-only; never linked into production."

[lints]
workspace = true

[dependencies]
sfx-pack-manifest = { path = "../sfx-pack-manifest" }

aes-gcm.workspace = true
ed25519-dalek.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
base64.workspace = true
rand.workspace = true
rand_chacha.workspace = true
